<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg3"
    >
    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_marginLeft="@dimen/baseMargin"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="goBack"
            android:src="@drawable/back"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/top_title2"
            android:layout_marginRight="@dimen/baseMargin"
            android:gravity="center"
            android:textSize="16dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_below="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/usernameLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-60dp"
            android:layout_marginRight="@dimen/baseMargin"
            android:layout_marginLeft="@dimen/baseMargin"
            android:orientation="vertical"
            android:layout_below="@+id/top">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/textUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/baseMargin"
                    android:src="@drawable/xingmingyonghumingnicheng"
                    />
                <EditText
                    android:id="@+id/edusername"
                    android:layout_toRightOf="@+id/textUsername"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/baseSize"
                    android:background="@color/nonColor"
                    android:textColor="@color/likeWhite"
                    android:hint="@string/usernameHint"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ddd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/emailLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/baseMargin"
            android:layout_marginLeft="@dimen/baseMargin"
            android:orientation="vertical"
            android:layout_below="@+id/usernameLay">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/baseMargin"
                    android:src="@drawable/phone"
                    />
                <EditText
                    android:id="@+id/edemail"
                    android:layout_toRightOf="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/baseSize"
                    android:background="@color/nonColor"
                    android:textColor="@color/likeWhite"
                    android:hint="@string/emailHint"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ddd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/baseMargin"
            android:layout_marginLeft="@dimen/baseMargin"
            android:orientation="vertical">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/code"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/baseMargin"
                    android:src="@drawable/yanzhengma"/>
                <EditText
                    android:id="@+id/edCode"
                    android:layout_toRightOf="@+id/code"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/baseSize"
                    android:background="@color/nonColor"
                    android:textColor="@color/likeWhite"
                    android:hint="@string/code"/>
                <TextView
                    android:id="@+id/get_code"
                    android:layout_alignParentRight="true"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:background="@color/baseColor"
                    android:textSize="@dimen/baseSize"
                    android:onClick="getCode"
                    android:text="@string/getcode"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ddd"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/passwordLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/baseMargin"
            android:layout_marginLeft="@dimen/baseMargin"
            android:orientation="vertical"
            android:layout_below="@+id/emailLay">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/textPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/baseMargin"
                    android:src="@drawable/mima"/>
                <EditText
                    android:id="@+id/edpassword"
                    android:layout_toRightOf="@+id/textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/baseSize"
                    android:background="@color/nonColor"
                    android:textColor="@color/likeWhite"
                    android:hint="@string/passwordHint"/>
            </RelativeLayout>
            <Viewin
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ddd"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/repasswordLay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="@dimen/baseMargin"
            android:layout_marginLeft="@dimen/baseMargin"
            android:orientation="vertical"
            android:layout_below="@+id/passwordLay">
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="30dp">
                <ImageView
                    android:id="@+id/repassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/baseMargin"
                    android:src="@drawable/mima"/>
                <EditText
                    android:id="@+id/edRepassword"
                    android:layout_toRightOf="@+id/repassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="@dimen/baseSize"
                    android:background="@color/nonColor"
                    android:textColor="@color/likeWhite"
                    android:hint="@string/rePassword"/>
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="5dp"
                android:background="#ddd"/>
        </LinearLayout>

        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="@dimen/baseMargin"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="@string/top_title1"/>
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/top_title2"
                android:textColor="@color/white"
                android:background="@color/baseColor"
                android:onClick="registerInfo"
                android:textSize="16dp"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>